<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">WVSS</string>
    <string name="app_name">WVSS</string>
    
    <string name="connect_server">连接监控服务器</string>   
    <string name="exit">退出</string>   
    <string name="InputIpAddress">请输入监控服务器IP地址</string>   
    <string name="cur_state"></string>   
    <string name="default_ip_addr">10.0.2.2</string>
    <string name="context_menu_header">选择采集终端</string>
    <string name="sendCommand">Send Command</string>
    <string name="CommandType">Command Type:</string>
    <string name="Argument1">Argument1</string>
    <string name="Argument2">Argument2</string>
    <string name="Argument3">Argument3</string>
    <string name="Argument1_default">0</string>
    <string name="Argument2_default">0</string>
    <string name="Argument3_default">0</string>
    <string name="CommandTitle">Command Option</string>
    <string name="command_ok">OK</string>
    <string name="command_cancle">Cancle</string>
    <string-array name="command_type">
        <item>command1</item>
        <item>command2</item>
        <item>command3</item>
        <item>command4</item>
    </string-array>
    <string name="command_type_prompt">select one command type</string>
    <string name="select_capture_end">Select one capture end</string>
    <string name="no_available_capture_end_msg">No capture end is available now. Please try again later!</string>
    <string name="no_available_capture_end_title">Sorry</string>
    <string-array name="available_capture_end"></string-array>
    <string name="OK">OK</string>
    <string name="CANCLE">Cancle</string>
</resources>
