<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
		xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
	  
	    <TextView 
	    	android:id="@+id/send_command_type_view"
	    	android:text="@string/CommandType"
	    	android:layout_marginLeft="20dip" 
	    	android:layout_marginRight="20dip"     	
	     	android:layout_width="match_parent" 
	     	android:layout_height="wrap_content" 
	     	android:gravity="left">
	     </TextView>
	      
	     <Spinner 
		     android:layout_width="match_parent" 
		     android:layout_height="40dp"
		     android:layout_marginLeft="20dip"
			 android:layout_marginRight="20dip" 
			 android:prompt = "@string/command_type_prompt"
			 android:id="@+id/spinner_commandtype">
	     </Spinner>
	     
	     <TextView 
		     android:layout_width="wrap_content" 
		     android:layout_height="wrap_content" 
		     android:layout_marginLeft="20dip" 
	    	 android:layout_marginRight="20dip" 
		     android:text="@string/Argument1" 
		     android:id="@+id/argument1_view">
	     </TextView>
	     
	     <EditText 
		     android:layout_marginLeft="20dip" 
	    	 android:layout_marginRight="20dip" 
		     android:layout_width="match_parent" 
		     android:layout_height="wrap_content" 
		     android:id="@+id/argument1_edit" 
		     android:text="@string/Argument1_default">
	     </EditText>
	     
	     <TextView 
		     android:layout_width="wrap_content" 
		     android:layout_height="wrap_content"
	    	 android:layout_marginLeft="20dip" 
	    	 android:layout_marginRight="20dip" 
		     android:id="@+id/argument2_view" 
		     android:text="@string/Argument2">
	     </TextView>
	     
	     <EditText 
		     android:layout_marginLeft="20dip" 
	    	 android:layout_marginRight="20dip" 
		     android:layout_width="match_parent" 
		     android:layout_height="wrap_content" 
		     android:id="@+id/argument2_edit" 
		     android:text="@string/Argument2_default">
	     </EditText>
	     
	     <TextView 
		     android:id="@+id/argument3_view" 
		     android:layout_marginLeft="20dip" 
	    	 android:layout_marginRight="20dip" 
		     android:layout_height="wrap_content" 
		     android:layout_width="wrap_content" 
		     android:text="@string/Argument3">
	     </TextView>
	     
	     <EditText 
		     android:layout_height="wrap_content" 
		     android:layout_width="match_parent" 
		     android:layout_marginLeft="20dip" 
	    	 android:layout_marginRight="20dip" 
		     android:id="@+id/argument3_edit" 
		     android:text="@string/Argument3_default">
	     </EditText>
	
	</LinearLayout>
</ScrollView>