<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:text="@string/InputIpAddress" android:layout_width="wrap_content" android:id="@+id/textView1"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="240dip" android:layout_gravity="center" android:text="@string/default_ip_addr" android:id="@+id/editText1"></EditText>
    <Button android:layout_height="wrap_content" android:text="@string/connect_server" android:layout_width="wrap_content" android:id="@+id/button1" android:layout_gravity="center"></Button>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_gravity="center" android:layout_width="wrap_content" android:text="@string/cur_state"></TextView>
</LinearLayout>
